# harvest-flow/api/src/controllers/claimable.ts
@@ -1,20 +1,18 @@
 import {Get, Query, Route} from "tsoa";
 import {Controller} from "@tsoa/runtime";
+import {ClaimableYield} from "@harvest-flow/utils";
 
-interface GetClaimableResponse {
-    yield: string;
-    principal: string;
-}
+
 
 @Route('claimable')
 export class ClaimableController extends Controller {
     @Get()
-    public async get(@Query() nftAddress: string, @Query() tokenId : string): Promise<GetClaimableResponse> {
+    public async get(@Query() nftAddress: string, @Query() tokenId : string): Promise<ClaimableYield> {
         return dummyClaimable;
     }
 }
 
-const dummyClaimable: GetClaimableResponse = {
+const dummyClaimable: ClaimableYield = {
     yield: '3',
     principal: '5',
 }
