# harvest-flow/middleware/src/helpers/query-constructors.ts
@@ -8,3 +8,40 @@ export function backendQueryGetAllNfts(notEnded: boolean): string {
     }
     return buildBackendQuery(endpoint, options);
 }
+
+export function backendQueryGetDetailedNftContract(contractAddress: string): string {
+    const endpoint = 'nft_details';
+    const options : QueryOptions = {
+        contractAddress,
+    }
+
+    return buildBackendQuery(endpoint, options);
+}
+
+export function backendQueryGetNftHistory(contractAddress: string): string {
+    const endpoint = 'nft_history';
+    const options : QueryOptions = {
+        contractAddress,
+    }
+
+    return buildBackendQuery(endpoint, options);
+}
+
+export function backendQueryGetUserNfts(userAddress: string): string {
+    const endpoint = 'user_nfts';
+    const options : QueryOptions = {
+        userAddress,
+    }
+
+    return buildBackendQuery(endpoint, options);
+}
+
+export function backendQueryGetClaimable(nftAddress: string, tokenId : string): string {
+    const endpoint = 'claimable';
+    const options : QueryOptions = {
+        nftAddress,
+        tokenId,
+    }
+
+    return buildBackendQuery(endpoint, options);
+}
